Fix typos + missing words

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -80,7 +80,7 @@ Gradient-based optimization drives many medical image analysis tasks, from class
 
 Mixed precision computing addresses this by strategically combining high- and low-precision arithmetic to reduce resource usage while maintaining accuracy. Since computational complexity scales quadratically with bit-width~\cite{Wang2019-qe}, moving away from standard double (FP64) or single (FP32) precision yields substantial gains. While DL frameworks like PyTorch~\cite{Paszke2019-vk} widely adopt Automatic Mixed Precision (AMP), its application in classical medical imaging remains limited. Instead, current acceleration efforts focus largely on hardware-specific implementations (e.g., FireANTs~\cite{Jena2024-ud}) or DL-based substitutes (e.g., VoxelMorph~\cite{Balakrishnan2019-rx}, FastSurfer~\cite{Henschel2022-wa}). However, these methods are not mutually exclusive with precision optimization; dynamic precision control could benefit both CPU-based pipelines and modern GPU-accelerated models.
 
-Applying reduced precision requires caution. For example, registration is an ill-posed optimization problem where errors can amplify across multi-resolution stages. Recent work~\cite{Mirhakimi2025-qb} shows that numerical uncertainty in ANTs linear registration can induce artifacts comparable to physical head motion (0.2mm). Therefore, precision reduction must be managed carefully to preserve anatomical integrity. Similarly for DL models, if this noise exceeds the gradient signal, optimization can stall or diverge. Standard AMP in PyTorch primarily addresses underflow issues through loss scaling and manages dynamic range but does not dynamically assess whether the mantissa bits are sufficient to represent the update direction accurately. While, existing tools like Verificarlo~\cite{Denis2015-zf,Chatelain2019-vw} enable rigorous precision analysis they incur prohibitive runtime overheads ($2.6\times$ to $16.8\times$)~\cite{Chatelain2019-vw}, making them unsuitable for real-time optimization. Furthermore, Verificarlo is limited to instrumentation on CPU. Conversely, standard AMP handles underflow via loss scaling but does not dynamically assess if mantissa bits are sufficient to represent gradient updates accurately.
+Applying reduced precision requires caution. For example, registration is an ill-posed optimization problem where errors can amplify across multi-resolution stages. Recent work~\cite{Mirhakimi2025-qb} shows that numerical uncertainty in ANTs linear registration can induce artifacts comparable to physical head motion (0.2mm). Therefore, precision reduction must be managed carefully to preserve anatomical integrity. Similarly for DL models, if this noise exceeds the gradient signal, optimization can stall or diverge. Standard AMP in PyTorch primarily addresses underflow issues through loss scaling and manages dynamic range but does not dynamically assess whether the mantissa bits are sufficient to represent the update direction accurately. While existing tools like Verificarlo~\cite{Denis2015-zf,Chatelain2019-vw} enable rigorous precision analysis, they incur prohibitive runtime overheads ($2.6\times$ to $16.8\times$)~\cite{Chatelain2019-vw}, making them unsuitable for real-time optimization. Furthermore, Verificarlo is limited to instrumentation on CPU.
 
 In this work, we introduce DynoMP, a dynamic mixed precision method that adjusts bit-width at runtime based on optimization stability. Unlike fixed heuristics, DynoMP estimates the gradient's signal-to-noise ratio to determine the minimum required precision per optimization step. We evaluate our method on diverse tasks: classical ANTs registration~\cite{Avants2020-xx}, MNIST classification~\cite{Deng2012-hh}, and VoxelMorph registration~\cite{Balakrishnan2019-rx}. We demonstrate that DynoMP maintains baseline accuracy while unlocking the efficiency of lower-precision formats. Our key contributions are: (1) a theoretical framework for estimating minimum precision requirements; (2) a practical dynamic precision control implementation for classical and DL pipelines; and (3) empirical validation demonstrating resource-efficient medical image computing.
 
@@ -95,7 +95,7 @@ In practice, computing the Lipschitz constant $K$ is non-trivial, so we empirica
 \begin{equation}
 	K \approx \frac{\|\nabla\mathcal{L}(\theta_{t+1}) - \nabla\mathcal{L}(\theta_{t})\|}{\|\theta_{t+1} - \theta_{t}\|} .
 \end{equation}
-To compute the norm of $\theta$ and $\nabla\mathcal{L}(\theta)$, we flatten their values into a single vector and compute the Euclidean norm. We modified the ITK library and developed a drop-in Python function for PyTorch training to retrieve these metrics at each iterations, compute $p_{min}$, and dynamically adjust the precision of the subsequent iteration accordingly. This method allows us to adapt the precision requirements in real-time, ensuring that we maintain convergence while optimizing computational efficiency.
+To compute the norm of $\theta$ and $\nabla\mathcal{L}(\theta)$, we flatten their values into a single vector and compute the Euclidean norm. We modified the ITK library and developed a drop-in Python function for PyTorch training to retrieve these metrics at each iteration, compute $p_{min}$, and dynamically adjust the precision of the subsequent iteration accordingly. This method allows us to adapt the precision requirements in real-time, ensuring that we maintain convergence while optimizing computational efficiency.
 
 \subsection{Dynamic Precision Control Policy}
 To prevent excessive casting overhead caused by oscillating precision requirements between iterations, we first apply a moving average filter (window $N=5$) to yield a smoothed estimate $\bar{p}_{min}$. 
@@ -103,7 +103,7 @@ To prevent excessive casting overhead caused by oscillating precision requiremen
 Because hardware and software libraries only support discrete precision formats, the continuous estimate $p_{min}$ must be mapped to a usable bit-width. We define a set of available precision formats $\mathcal{P}$ (e.g., corresponding to FP16, BF16, FP32, etc.). At each optimization step, the target precision $p_{target}$ is selected by rounding up to the nearest supported format $p_{target} = \min \{ p \in \mathcal{P} \mid p \ge \bar{p}_{min} \}$. This policy guarantees that the selected precision always satisfies the theoretical lower bound required for stability, while aggressively downcasting whenever the optimization landscape permits.
 
 \subsection{Virtual Precision Simulation}
-Validating convergence behavior across arbitrary bit-widths is challenging due to limited hardware support for non-standard floating-point formats. To address this, we use the VPREC backend from Verificarlo~\cite{Chatelain2019-vw}, which instruments standard floating-point operations to simulate reduced precision by truncating mantissa bits. This approach allows us to model numerical noise and stability on standard CPUs without requiring specialized hardware. To integrate this, we recompiled the ITK library with Verificarlo support and modified the ANTs registration pipeline to link against this instrumented build. We excluded critical metric calculations from instrumentation to prevent convergence failure. At each step, arithmetic operations are cast to the target virtual precision $p_{target}$, enabling the evaluation of DynoMP's policy across a extensive collection of data formats without extensive re-engineering of the underlying libraries.
+Validating convergence behavior across arbitrary bit-widths is challenging due to limited hardware support for non-standard floating-point formats. To address this, we use the VPREC backend from Verificarlo~\cite{Chatelain2019-vw}, which instruments standard floating-point operations to simulate reduced precision by truncating mantissa bits. This approach allows us to model numerical noise and stability on standard CPUs without requiring specialized hardware. To integrate this, we recompiled the ITK library with Verificarlo support and modified the ANTs registration pipeline to link against this instrumented build. We excluded critical metric calculations from instrumentation to prevent convergence failure. At each step, arithmetic operations are cast to the target virtual precision $p_{target}$, enabling the evaluation of DynoMP's policy across an extensive collection of data formats without extensive re-engineering of the underlying libraries.
 
 \section{Experiments}
 \subsection{Pipelines and Datasets}
@@ -176,9 +176,9 @@ To evaluate whether our proposed DynoMP method degraded registration accuracy, w
 	\label{fig:ants-loss}
 \end{figure}
 
-Figure~\ref{fig:pytorch-pmin} shows the estimated $p_{min}$ across iterations for the Pytorch models. For MNIST, our model estimate a $p_{min}$ of FP16 for the early iteration, but it quickly increases to FP32 and remains for the rest of the training. If FP24 hardware were available, it could be leveraged for a majority (64\%) of the training. As with the ANTs registration, we observe a general increase in required precision across iterations.
+Figure~\ref{fig:pytorch-pmin} shows the estimated $p_{min}$ across iterations for the PyTorch models. For MNIST, our model estimates a $p_{min}$ of FP16 for the early iterations, but it quickly increases to FP32 and remains for the rest of the training. If FP24 hardware were available, it could be leveraged for a majority (64\%) of the training. As with the ANTs registration, we observe a general increase in required precision across iterations.
 
-VoxelMorph 2D and 3D models require FP24 precision in the vast majority of iteration; only a limited number ($<10$) of the initial batches require FP16 precision. However, due to the lack of FP24 hardware support on H100 GPUs, we used FP32 instead. BF16 and AMP strategies training diverges after a few batches. We omit the results for FP16, as the gradient vanished, preventing estimation of $p_{min}$. Again, we observe a general increase in required precision across iterations, although plateauing after the first 2,000 batches.
+VoxelMorph 2D and 3D models require FP24 precision in the vast majority of iterations; only a limited number ($<10$) of the initial batches require FP16 precision. However, due to the lack of FP24 hardware support on H100 GPUs, we used FP32 instead. Training with BF16 and AMP strategies diverges after a few batches. We omit the results for FP16, as the gradient vanished, preventing estimation of $p_{min}$. Again, we observe a general increase in required precision across iterations, although plateauing after the first 2,000 batches.
 \begin{figure*}[b!]
 	\centering
 	\begin{subfigure}{0.32\textwidth}
@@ -233,7 +233,7 @@ Implementing dynamic mixed precision in existing scientific codebases highlights
 Addressing this limitation requires refactoring the library's core templated architecture, where high-precision assumptions are deeply embedded. However, our VPREC simulations suggest that overcoming these constraints would yield significant efficiency gains, highlighting the critical need to modernize foundational libraries for flexible, hardware-aware precision control.
 
 % \subsection{Theoretical Applicability}
-The theoretical bound proposed by Hayford et al.~\cite{Hayford2024-kb} assumes conditions such as loss convexity and Lipschitz continuity. In complex tasks like deformable image registration, these assumptions may not strictly hold. Additionally, validation in medical image registration often relies on high-precision (FP64) baselines rather than ground truth, as the problem is ill-posed. Despite these factors, our empirical results indicate that the $p_{min}$ estimate serves as a reliable proxy for optimization stability, with DynoMP maintaining baseline accuracy across the tested pipelines. Future work will investigate adaptive smoothing techniques and explore establishing numerical threshold of acceptable accuracy for clinical applications using overlap metrics such as the Dice score.
+The theoretical bound proposed by Hayford et al.~\cite{Hayford2024-kb} assumes conditions such as loss convexity and Lipschitz continuity. In complex tasks like deformable image registration, these assumptions may not strictly hold. Additionally, validation in medical image registration often relies on high-precision (FP64) baselines rather than ground truth, as the problem is ill-posed. Despite these factors, our empirical results indicate that the $p_{min}$ estimate serves as a reliable proxy for optimization stability, with DynoMP maintaining baseline accuracy across the tested pipelines. Future work will investigate adaptive smoothing techniques and explore establishing numerical thresholds of acceptable accuracy for clinical applications using overlap metrics such as the Dice score.
 
 % \subsection{Conclusion}
 In summary, DynoMP bridges theoretical optimization stability with practical mixed precision computing. By dynamically estimating the minimum required bit-width at runtime, we demonstrate that medical imaging pipelines can operate effectively below standard FP64/FP32 formats without compromising accuracy. While broad adoption is currently limited by complex software architectures and the availability of intermediate-precision hardware, DynoMP establishes a theoretical framework for advancing resource-efficient medical image computing.
